src/App.scss
@use "./partials/variables" as *;
@use "./partials/fonts" as *;
@use "./partials/mixins" as *;

.App {
  background-image: url("./assets/images/bg-sidebar-mobile.svg");
  background-repeat: no-repeat;
  background-size: 100%;
  height: 100vh;
  width: 100%;
  position: relative;
  background-color: $color-background;
  display: flex;
  flex-direction: column;
  align-items: center;
  //padding: 0 5%;

  @include desktop {
    background-image: none;
    flex-direction: row;
    width: 100%;
    justify-content: center;
  }

  &__wrapper {
    width: 100%;
    @include desktop {
      display: flex;
      width: 100%;
      max-width: 110rem;
      height: 75%;
      background-color: $neutral-white;
      border-radius: 12px;
      padding: 2rem;
      margin: 0 5%;
      -webkit-box-shadow: 0px 20px 25px -14px rgba(156, 156, 156, 0.6);
      -moz-box-shadow: 0px 20px 25px -14px rgba(156, 156, 156, 0.6);
      box-shadow: 0px 20px 25px -14px rgba(156, 156, 156, 0.6);
    }
  }

  &__step-container {
    @include desktop {
      background-image: url("./assets/images/bg-sidebar-desktop.svg");
      background-size: cover;
      background-repeat: no-repeat;
      width: 35%;
      padding: 3rem 2.4rem;
      border-radius: 8px;
    }
  }

  &__form {
    width: 100%;

    @include desktop {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      padding: 6rem 10% 0;
    }
  }

  &__component {
    background-color: $neutral-white;
    border-radius: 8px;
    padding: 2.6rem 5%;
    margin: 0 5%;
    -webkit-box-shadow: 0px 20px 25px -14px rgba(156, 156, 156, 0.6);
    -moz-box-shadow: 0px 20px 25px -14px rgba(156, 156, 156, 0.6);
    box-shadow: 0px 20px 25px -14px rgba(156, 156, 156, 0.6);

    @include desktop {
      -webkit-box-shadow: none;
      -moz-box-shadow: none;
      box-shadow: none;
      margin: 0;
      padding: 0;
    }
  }

  &__button-container {
    position: absolute;
    bottom: 0;
    width: 100%;
    background-color: $neutral-white;
    height: 7rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 5%;

    @include desktop {
      width: auto;
      position: relative;
      padding: 0;
    }
  }

  &__button {
    background: none;
    color: $neutral-white;
    border: none;
    padding: 1.2rem 0;
    width: 10rem;
    font: inherit;
    cursor: pointer;
    outline: inherit;
    font-size: 1.6rem;
    border-radius: 4px;

    &--next {
      background-color: $color-primary-blue;
      margin-left: auto;
    }

    &--back {
      color: $secondary-text-grey;
      text-align: left;
    }

    &--confirm {
      background-color: $color-purple;
    }
  }

  &__change {
    background: none;
    color: $secondary-text-grey;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: inherit;
    font-size: 1.4rem;
    text-decoration: underline;
    text-align: left;
  }
}

